# demo_c

./: CMakeLists.txt  hello-world.c  op.c
src/: CMakeLists.txt  op.c
test/: CMakeLists.txt  test_op.c
